# microjava

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  Makefile
cmake/: board_mcu_map.cmake  map.cmake  null.c  set_toolchain.cmake
core/: Makefile
docs/dev/: build_system.md
drivers/mcu/rp2040/: CMakeLists.txt  Makefile
drivers/mcu/rp2040/include/rp2040/: bootrom.h  floating_point.h  resets.h  xosc.h
drivers/mcu/rp2040/src/: bootrom.c  clocks.c  crt0.S  floating_point.c  int_divider.c  memory.c  pll.c  resets.c  xosc.c
hardware/mal/mock/: mcu_options.cmake
hardware/mal/rp2040/: CMakeLists.txt  default.ld
hardware/mal/rp2040/bootrom/: bootrom.h
hardware/mal/rp2040/clocks/: clocks.h
hardware/mal/rp2040/floating_point/: floating_point.c
hardware/mal/rp2040/int_divider/: int_divider.c
hardware/mal/rp2040/pll/: pll.c
hardware/mal/rp2040/xosc/: xosc.c
hardware/mcu/mock/: CMakeLists.txt
hardware/mcu/rp2040/: CMakeLists.txt  boards.cmake  mcu_options.cmake
hardware/mcu/rp2040/boot2/: w25q080.S
hardware/mcu/rp2040/bootrom/: fplib.h
hardware/mcu/rp2040/clocks/: clocks.c
hardware/mcu/rp2040/memory/: memory.c  memory.h
hardware/mcu/rp2040/resets/: resets.c
hardware/mcu/rp2040/stdlib/: assert.c
hardware/mcu/unix/: CMakeLists.txt  mcu_main.c  mcu_options.cmake
make/: module.mk
make/targets/pico/: Makefile  default.ld
make/types/: executable.mk  interface.mk  static_lib.mk
mal/: CMakeLists.txt
mal/interface/: CMakeLists.txt  Makefile
mal/interface/include/mal/: interface.h
mal/mock/: CMakeLists.txt  McuMock.cpp
mal/rp2040/: CMakeLists.txt  Makefile  mcu_main.c  mcu_options.cmake
mal/rp2040/bootrom/: bootrom.c
mal/rp2040/clocks/: clocks.c  clocks.h
mal/rp2040/int_divider/: int_divider.c  int_divider.h
mal/rp2040/memory/: memory.c  memory.h
mal/rp2040/pll/: pll.c  pll.h
mal/rp2040/resets/: resets.h
shared/: CMakeLists.txt  Makefile
shared/include/shared/: types.h
test/: CMakeLists.txt
test/src/: DummyTest.cpp
